modal new workspace and translations

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -75,6 +75,10 @@
 	},
 	"Workspaces": {
 		"NewWorkspace": "New workspace",
+		"NewWorkspaceModal": {
+			"BtnCreate": "Create",
+			"BtnCancel": "Cancel"
+		},
 		"NewBoard": "Add new board",
 		"LabelWorkspace": "Workspace",
 		"NewBoardName": "Board name",
